--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,6 +2,7 @@
   background-color: black;
   color: white;
   max-width: 1280px;
+  font-family: "Inter", Arial, sans-serif;
 }
 
 .page__section {
