--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 @import url(../blocks/header.css);
 @import url(../blocks/profile.css);
 @import url(../blocks/card.css);
+@import url(../blocks/cards.css);
 /* @import url(../blocks/recipes.css); */
 /* @import url(../blocks/form.css); */
 /* @import url(../blocks/reservation.css); */
