--- a/blocks/card.css
+++ b/blocks/card.css
@@ -12,8 +12,6 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
-  /* border-top-left-radius: 10px;
-    border-top-right-radius: 10px; */
   list-style: none;
 }
 
@@ -54,9 +52,12 @@
 }
 
 @media screen and (max-width: 620px) {
+  /* .profile__info {
+    padding-top: 75px;
+  } */
+
   .card__list {
     margin: 0px;
-    /* margin-bottom: 30px; */
     padding: 0px;
   }
 }
