--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,18 +1,15 @@
 .cards {
-  /* fonts */
   margin-top: 30px;
 }
 
 @media screen and (max-width: 620px) {
   .cards {
     margin: 0px;
-    /* margin-bottom: 30px; */
     padding: 0px;
   }
 
   .cards {
-    /* fonts */
-    /* margin-top: 100px; */
     padding-top: 110px;
+    /* padding-bottom: 50px; */
   }
 }
