--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,20 +1,27 @@
 .footer {
-  width: 318 px;
+  /* width: 318 px;
   height: 18 px;
   top: 1139 px;
-  left: 200 px;
+  left: 200 px; */
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
   color: #545454;
 }
 
 .footer__content {
-  text-align: center;
+  text-indent: 200px;
   text-justify: auto;
   padding-top: 60px;
   /* display: flex;
   justify-content: space-between;
   padding: 60px 200px 0; */
   margin: 0;
+}
+
+@media screen and (max-width: 320px) {
+  .footer__content {
+    text-indent: 20px;
+  }
 }
 
 /*
