--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,6 +2,7 @@
   background-color: black;
   color: white;
   max-width: 1280px;
+  margin: 0 auto;
   font-family: "Inter", Arial, sans-serif;
 }
 
@@ -10,7 +11,6 @@
   width: 100%;
   position: relative;
   margin: 0 auto;
-  overflow-x: hidden;
 }
 
 .page__content {
