--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   max-width: 880px;
-  height: 120px;
+  /* height: 120px; */
   padding: 40px;
   margin: 0 auto;
 }
@@ -10,13 +10,17 @@
 .profile__info {
   display: grid;
   justify-content: center;
-  max-width: 415px;
-  height: 77px;
-  padding-right: 20px;
+  max-width: 425px;
+  /* height: 77px; */
+  top: 181px;
+  left: 350px;
+  /* border: 1px solid #ffffff; */
+  /* padding-right: 20px; */
   grid-template-areas:
     "title button"
+    "edit button"
     "description description";
-  grid-template-columns: minmax(auto 473px) auto;
+  grid-template-columns: minmax(auto, 473px) auto;
 }
 
 .profile__image {
@@ -25,35 +29,26 @@
   border-radius: 50%;
   object-fit: cover;
   background-position: center;
-  margin-right: 24px;
-}
-
-.profile__edit-button {
-  background: transparent url(../images/Edit\ Button.png) center no-repeat;
-  width: 24px;
-  height: 24px;
-  border: 1px;
-}
-
-.profile__add-button {
-  background: transparent url(../images/Add\ Button.svg) center no-repeat;
-  width: 150px;
-  height: 50px;
-  min-width: 75px;
-  margin-left: auto;
+  margin-right: 14px;
 }
 
 .profile__title {
   font-size: 42px;
   line-height: 48px;
   font-weight: 500px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: ;
   grid-area: title;
   margin: 0;
 }
 
 .profile__description {
   width: 415px;
-  height: 22px;
+  /* height: 22px; */
+  top: 236px;
+  left: 350px;
   font-size: 18px;
   line-height: 21.78px;
   font-weight: 400;
@@ -65,7 +60,36 @@
   padding-right: 20px;
 }
 
-@media screen and (max-width: 480px) {
+.profile__edit-button {
+  background: transparent url(../images/Edit\ Button.svg) center no-repeat;
+  width: 24px;
+  /* height: 24px; */
+  /* align-items: center; */
+  top: 196px;
+  left: 741px;
+  border: 1px solid #ffffff;
+}
+
+.profile__edit-button:hover {
+  cursor: pointer;
+  color: #2f80ed;
+}
+
+.profile__add-button {
+  background: transparent url(../images/Add\ Button.svg) center no-repeat;
+  width: 150px;
+  height: 50px;
+  border: 2px solid #ffffff;
+  /* min-width: 75px; */
+  margin-left: auto;
+}
+
+.profile__add-button:hover {
+  cursor: pointer;
+  color: #2f80ed;
+}
+
+/* @media screen and (max-width: 480px) {
   .profile__title {
     font-size: 32px;
   }
@@ -77,40 +101,97 @@
   .profile__add-button {
     width: 75px;
   }
-}
+} */
 
 @media screen and (max-width: 320px) {
   .profile {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 282px;
+    height: 286px;
+    top: 126px;
+    left: 19px;
   }
 
-  .profile__title {
-    font-size: 22px;
+  .profile__image {
+    /* width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    background-position: center;
+    margin-right: 14px; */
+    padding-bottom: 35px;
   }
 
   .profile__info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
+    width: 282px;
+    height: 50px;
+    top: 276px;
+    left: 19px;
+    /* grid-template-areas:
+      "title button"
+      "profile__edit-button"
+      "description description";
+    grid-template-columns: minmax(auto 320px) auto; */
+    /* margin-bottom: 0px;
+    padding: 10px 0px 10px; */
+  }
+
+  .profile__title {
+    width: 196px;
+    height: 22px;
+    top: 276px;
+    left: 62px;
+    line-height: 26.63px;
+    font-weight: 500;
+    font-size: 22px;
+    font-family: "Inter", Arial, sans-serif;
   }
 
   .profile__description {
     display: flex;
     justify-content: center;
+    width: 282px;
+    height: 14px;
+    top: 312px;
+    left: 19px;
+    font-weight: 400;
+    font-family: "Inter", Arial, sans-serif;
+    border: 1px;
+    /* padding: 10px 0px 10px; */
+    padding-bottom: 45px;
+  }
+
+  .profile__edit-button {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    width: 18px;
+    height: 18px;
+    top: 280px;
+    left: 268px;
+    padding: 10px 0px 10px;
+    border: 1px;
   }
 
   .profile__add-button {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    height: 100px;
-    width: 100%;
-    margin: 0px;
-    padding: 15px 0px 15px;
+    width: 282px;
+    height: 50px;
+    top: 162px;
+    left: 19px;
+    padding: 10px 0px 10px;
+    border: 2px;
+
+    /* width: 100%;
+    margin: 0px; */
+    /* padding: 55px 0px 15px; */
+    /* padding-top: 35px; */
   }
 }
