--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,31 +2,25 @@
   margin-top: 45px;
   max-width: 880px;
   min-height: 74px;
-
-  .vector {
-    width: 173px;
-    height: 33px;
-    top: 45px;
-    left: 200px;
-  }
-
-  .vector:hover {
-    color: #2f80ed;
-  }
+  border-bottom: 1px;
+  color: #ffffff;
 }
 
-.header :hover {
+.header:hover {
   color: #2f80ed;
+  cursor: pointer;
 }
 
-.line {
+.vector {
   width: 880px;
-  top: 119px;
-  left: 200px;
-  align-items: center;
-  border: 1px;
-  rotate: 0;
-  opacity: 70%;
+  height: 33px;
+  top: 45px;
+  color: #ffffff;
+}
+
+.vector:hover {
+  color: #2f80ed;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 320px) {
@@ -34,21 +28,16 @@
     margin-top: 28px;
     max-width: 320px;
     height: 56px;
-
-    .vector {
-      width: 126px;
-      height: 24px;
-      top: 28px;
-      left: 27px;
-    }
   }
-  .line {
-    width: 320px;
-    top: 84px;
-    left: 200px;
-    align-items: center;
-    border: 1px;
-    rotate: 0;
-    opacity: 70%;
+
+  .vector {
+    width: 126px;
+    height: 24px;
+    top: 28px;
+    left: 27px;
+  }
+
+  .vector:hover {
+    color: #2f80ed;
   }
 }
