--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,3 +1,20 @@
 .cards {
-  margin-top: 70px;
+  margin-top: 8px;
+}
+
+.cards__list {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+@media screen and (max-width: 620px) {
+  .cards__list {
+    margin: 0px;
+    padding: 0px;
+  }
 }
