--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,11 +1,8 @@
 .footer {
   max-width: 880px;
-  width: 100%;
-  position: relative;
-  margin: 0 auto;
   margin-top: 45px;
-  align-content: center;
   align-items: center;
+  margin-bottom: 36px;
 }
 
 .footer__content {
@@ -22,6 +19,13 @@
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 20px;
+  line-height: 100%;
+  letter-spacing: 0%;
   color: #545454;
+}
+
+@media screen and (max-width: 320px) {
+  .footer__copyright {
+    font-size: 14px;
+  }
 }
