--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -5,27 +5,20 @@
   margin-bottom: 36px;
 }
 
-.footer__content {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 400;
-  color: #545454;
-  display: flex;
-  justify-content: flex-start;
-  margin: 0;
-}
 .footer__copyright {
   margin: 0;
   font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 100%;
-  letter-spacing: 0%;
   color: #545454;
 }
 
 @media screen and (max-width: 320px) {
   .footer__copyright {
     font-size: 14px;
+    margin-left: 19px;
   }
 }
